# hw_opencl

./: README.md
lab_1/: CMakeLists.txt  main.c  matrixmul.cl
lab_2/: CMakeLists.txt  main.c  prefsum.cl
